--- a/r2-navigator/src/main/res/layout/item_spinner_font.xml
+++ b/r2-navigator/src/main/res/layout/item_spinner_font.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
-    android:layout_marginTop="16dp"
+    android:layout_margin="16dp"
     android:gravity="center_vertical">
 
-        <TextView
+    <TextView
         android:id="@+id/font"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12dp" />
+        android:textColor="@android:color/black"
+        android:textSize="20dp" />
 
     <View
         android:layout_width="wrap_content"
