--- a/r2-navigator/src/main/res/layout/item_spinner_font.xml
+++ b/r2-navigator/src/main/res/layout/item_spinner_font.xml
@@ -3,7 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:paddingTop="12dp"
+    android:paddingRight="16dp"
+    android:paddingLeft="16dp"
+    android:paddingBottom="6dp"
     android:gravity="center_vertical">
 
     <TextView
